# montage

./: package.json  tsconfig.json  vite.config.ts
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: main.rs
src/models/: common.ts
src/pages/: Dashboard.vue
src/store/: dashboard.ts
src/utils/: fabric.ts
